frontend/test/should_fail/index_multiple_edge_index_mismatch.grg
#using "index_multiple_model.gm"

rule i {
	if{ edgesFromIndexMultipleFromTo(Ni, 0, 1, Ei, 42, 44).size() > 0; }
	
	modify {
	}
}
